--- a/More_Advanced_Examples_of_Bokeh_for_Astronomy.ipynb
+++ b/More_Advanced_Examples_of_Bokeh_for_Astronomy.ipynb
@@ -2,7 +2,19 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "4712193a",
+   "id": "c5c682c6",
+   "metadata": {},
+   "source": [
+    "Copyright (c) <year>, <copyright holder>\n",
+    "All rights reserved.\n",
+    "\n",
+    "This source code is licensed under the BSD-style license found in the\n",
+    "LICENSE file in the root directory of this source tree. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1ffddbd1",
    "metadata": {},
    "source": [
     "----------------------------------\n",
